# Project-Iron-Throne-Server

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: lightBringer.h  pch.h
include/blackIce/: blackIce.h
shared/: flatc  runFlatC.sh
shared/schema/: action.fbs  actionResponse.fbs  anomaly_api.fbs  config.fbs  netinterface.fbs
shared/schema-include/: anomaly_api_generated.h
src/: CMakeLists.txt  blackIce.cpp  lightBringer.cpp  logic.cpp  main.cpp
src/modules/blackIce/: CMakeLists.txt  blackIce.cpp
src/modules/master/: README.md
src/modules/master/arsenalHttp/: CMakeLists.txt  arsenalConfig.h  arsenalHttp.cpp  arsenalHttp.h
src/modules/puppet/: README.md
src/modules/puppet/blackIce/: CMakeLists.txt  blackIce.cpp  blackIce.h  blackIceConfig.h  udp_frag_generated.h
src/testing/: Makefile  initialTest.cpp
testing/blackIce/: CMakeLists.txt  main.cpp
tests/blackIce-Client/: main.cpp
